--- a/scilab/libs/hashtable/Makefile.in
+++ b/scilab/libs/hashtable/Makefile.in
@@ -36,7 +36,6 @@
 ### Target, variable, suffixes which are supposed to be usefull in every makefile.am
 ##########
 
-
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
@@ -56,8 +55,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(libscihashtable_la_include_HEADERS) \
-	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in \
 	$(top_srcdir)/Makefile.incl.am
 @NEED_JAVA_TRUE@am__append_1 = java
 subdir = libs/hashtable
@@ -77,7 +75,7 @@ am__aclocal_m4_deps = $(top_srcdir)/m4/docbook.m4 \
 	$(top_srcdir)/m4/umfpack.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
-mkinstalldirs = $(install_sh) -d
+mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/modules/core/includes/machine.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
@@ -102,8 +100,7 @@ am__nobase_list = $(am__nobase_strip_setup); \
 am__base_list = \
   sed '$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;s/\n/ /g' | \
   sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
-am__installdirs = "$(DESTDIR)$(pkglibdir)" \
-	"$(DESTDIR)$(libscihashtable_la_includedir)"
+am__installdirs = "$(DESTDIR)$(pkglibdir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
 libscihashtable_la_DEPENDENCIES =
 am__objects_1 = hashtable_utility.lo hashtable_itr.lo hashtable.lo
@@ -127,7 +124,6 @@ LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	$(LDFLAGS) -o $@
 SOURCES = $(libscihashtable_la_SOURCES)
 DIST_SOURCES = $(libscihashtable_la_SOURCES)
-HEADERS = $(libscihashtable_la_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -364,11 +360,6 @@ HASHTABLE_C_SOURCES = hashtable_utility.c \
 hashtable_itr.c \
 hashtable.c
 
-libscihashtable_la_includedir = $(pkgincludedir)
-libscihashtable_la_include_HEADERS = ./hashtable_itr.h \
-./hashtable.h \
-./hashtable_utility.h
-
 pkglib_LTLIBRARIES = libscihashtable.la
 libscihashtable_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
 libscihashtable_la_SOURCES = $(HASHTABLE_C_SOURCES)
@@ -546,26 +537,6 @@ mostlyclean-libtool:
 
 clean-libtool:
 	-rm -rf .libs _libs
-install-libscihashtable_la_includeHEADERS: $(libscihashtable_la_include_HEADERS)
-	@$(NORMAL_INSTALL)
-	test -z "$(libscihashtable_la_includedir)" || $(MKDIR_P) "$(DESTDIR)$(libscihashtable_la_includedir)"
-	@list='$(libscihashtable_la_include_HEADERS)'; test -n "$(libscihashtable_la_includedir)" || list=; \
-	for p in $$list; do \
-	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
-	  echo "$$d$$p"; \
-	done | $(am__base_list) | \
-	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libscihashtable_la_includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libscihashtable_la_includedir)" || exit $$?; \
-	done
-
-uninstall-libscihashtable_la_includeHEADERS:
-	@$(NORMAL_UNINSTALL)
-	@list='$(libscihashtable_la_include_HEADERS)'; test -n "$(libscihashtable_la_includedir)" || list=; \
-	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
-	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libscihashtable_la_includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libscihashtable_la_includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -652,9 +623,9 @@ distdir: $(DISTFILES)
 check-am: all-am
 	$(MAKE) $(AM_MAKEFLAGS) check-local
 check: check-am
-all-am: Makefile $(LTLIBRARIES) $(HEADERS) all-local
+all-am: Makefile $(LTLIBRARIES) all-local
 installdirs:
-	for dir in "$(DESTDIR)$(pkglibdir)" "$(DESTDIR)$(libscihashtable_la_includedir)"; do \
+	for dir in "$(DESTDIR)$(pkglibdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -705,8 +676,7 @@ info: info-am
 
 info-am:
 
-install-data-am: install-data-local \
-	install-libscihashtable_la_includeHEADERS
+install-data-am: install-data-local
 
 install-dvi: install-dvi-am
 
@@ -752,8 +722,7 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-libscihashtable_la_includeHEADERS \
-	uninstall-pkglibLTLIBRARIES
+uninstall-am: uninstall-pkglibLTLIBRARIES
 
 .MAKE: check-am install-am install-strip
 
@@ -765,16 +734,13 @@ uninstall-am: uninstall-libscihashtable_la_includeHEADERS \
 	install install-am install-data install-data-am \
 	install-data-local install-dvi install-dvi-am install-exec \
 	install-exec-am install-html install-html-am \
-	install-html-local install-info install-info-am \
-	install-libscihashtable_la_includeHEADERS install-man \
+	install-html-local install-info install-info-am install-man \
 	install-pdf install-pdf-am install-pkglibLTLIBRARIES \
 	install-ps install-ps-am install-strip installcheck \
 	installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	tags uninstall uninstall-am \
-	uninstall-libscihashtable_la_includeHEADERS \
-	uninstall-pkglibLTLIBRARIES
+	tags uninstall uninstall-am uninstall-pkglibLTLIBRARIES
 
 
 # This target enables tests for Scilab
