add Scilab context parameter in API functions

--- a/scilab/modules/api_scilab/api_scilab.vcproj
+++ b/scilab/modules/api_scilab/api_scilab.vcproj
@@ -563,6 +563,10 @@
 					RelativePath=".\api_scilab_export.def"
 					>
 				</File>
+				<File
+					RelativePath=".\api_scilab_header.def"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<File
