bug 4365, 4421, 4438, 4828 (to do enable on -nw linux)

--- a/scilab/modules/shell/src/c/shell.vcproj
+++ b/scilab/modules/shell/src/c/shell.vcproj
@@ -586,6 +586,10 @@
 				Name="Import"
 				>
 				<File
+					RelativePath=".\fileio_Import.def"
+					>
+				</File>
+				<File
 					RelativePath=".\libjvm_Import.def"
 					>
 				</File>
