--- a/scilab/configure.ac
+++ b/scilab/configure.ac
@@ -692,7 +692,7 @@ if test "$with_javasci" != no -o "$with_gui" != no -o "$enable_build_help" != no
 
 				LDFLAGS_save=$LDFLAGS
 				# Provide known paths where distribs/OS can store JNI libs
-				LDFLAGS='-L/usr/lib/jni -L/usr/lib64/jni/ -L$(top_srcdir)/thirdparty -L$(top_srcdir)/bin'
+				LDFLAGS='-L/usr/lib/jni -L/usr/lib64/jni/ -L$(SCI_SRCDIR)/thirdparty/ -L$(SCI_SRCDIR)/bin/'
 				AC_CHECK_LIB([jogl], [glTexParameterf], [JOGL_LIBS="-ljogl"],
 				  [AC_MSG_ERROR([libjogl: Library missing (Cannot find symbol glTexParameterf). Check if libjogl - C/Java (JNI) interface for JOGL - is installed and if the version is correct. Note that you might have to update etc/librarypath.xml to provide the actual path the the JNI libraries.])])
 				LDFLAGS=$LDFLAGS_save
@@ -705,7 +705,7 @@ if test "$with_javasci" != no -o "$with_gui" != no -o "$enable_build_help" != no
 
 				LDFLAGS_save=$LDFLAGS
 				# Provide known paths where distribs/OS can store JNI libs
-				LDFLAGS='-L/usr/lib/jni -L/usr/lib64/jni/ -ldl -L$(top_srcdir)/thirdparty/ -L$(top_srcdir)/bin/'
+				LDFLAGS='-L/usr/lib/jni -L/usr/lib64/jni/ -ldl -L$(SCI_SRCDIR)/thirdparty/ -L$(SCI_SRCDIR)/bin/'
 				if test "$MACOSX" = 1; then
 				   symbol="Java_com_sun_gluegen_runtime_MacOSXDynamicLinkerImpl_dlclose__J"
 				else
@@ -1036,7 +1036,7 @@ if test "$with_scicos" != no -a "$GUI_ENABLE" != no; then
 
    LDFLAGS_save=$LDFLAGS
    # Provide known paths where distribs/OS can store JNI libs
-   LDFLAGS='-L/usr/lib/jni -L/usr/lib64/jni/ -L$(top_srcdir)/bin -L$(top_srcdir)/thirdparty  -lpthread'
+   LDFLAGS='-L/usr/lib/jni -L/usr/lib64/jni/ -L$(SCI_SRCDIR)/bin/ -L$(SCI_SRCDIR)/thirdparty/  -lpthread'
    # -lpthread because of packaging bug in jhdf5
    AC_CHECK_LIB([jhdf5], [h5JNIFatalError], [JHDF5_LIBS="-ljhdf5"],
      [AC_MSG_ERROR([libjhdf5: Library missing (Cannot find symbol h5JNIFatalError). Check if libjhdf5 - C/Java (JNI) interface for HDF5 - is installed and if the version is correct. Note that you might have to update etc/librarypath.xml to provide the actual path the the JNI libraries.])])
