* Latex/MathML rendering is managed also in xstrign * load function of the jar has been moved in a dedicated file

--- a/scilab/modules/graphics/Makefile.am
+++ b/scilab/modules/graphics/Makefile.am
@@ -38,6 +38,7 @@ libscigraphics_la_CFLAGS = -I$(top_srcdir)/libs/doublylinkedlist/includes/ \
 
 GRAPHICS_C_SOURCES = src/c/GetCommandArg.c \
 src/c/WindowList.c \
+src/c/loadTextRenderingAPI.c \
 src/c/getHandleProperty/get_figure_position_property.c \
 src/c/getHandleProperty/get_figure_size_property.c \
 src/c/getHandleProperty/get_visible_property.c \
