--- a/scilab/modules/xpad/src/c/xpad.vcproj
+++ b/scilab/modules/xpad/src/c/xpad.vcproj
@@ -390,6 +390,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\sci_gateway\cpp\sci_xpad_highlightline.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ScilabKeywords.c"
 				>
 			</File>
