Some files moved from a module to an  other

--- a/scilab/modules/scicos_blocks/Makefile.am
+++ b/scilab/modules/scicos_blocks/Makefile.am
@@ -320,6 +320,8 @@ src/c/writeau.c \
 src/c/writec.c \
 src/c/zcross2.c
 
+SCICOS_BLOCK_CPP_SOURCES = src/jni/XcosDiagram.cpp
+
 NON_BLOCK_C_SOURCES =  src/c/scoGetProperty.c \
 src/c/scoSetProperty.c \
 src/c/scoMisc.c \
@@ -409,7 +411,8 @@ libsciscicos_blocks_la_CFLAGS= -I$(srcdir)/includes/ \
 
 libsciscicos_blocks_la_SOURCES = $(SCICOS_BLOCKS_C_SOURCES) \
 $(SCICOS_BLOCKS_FORTRAN_SOURCES) \
-$(NON_BLOCK_C_SOURCES)
+$(NON_BLOCK_C_SOURCES) \
+$(SCICOS_BLOCK_CPP_SOURCES)
 
 
 # For the code check (splint)
