--- a/scilab/modules/scicos_blocks/Makefile.am
+++ b/scilab/modules/scicos_blocks/Makefile.am
@@ -408,6 +408,15 @@ libsciscicos_blocks_la_CFLAGS= -I$(srcdir)/includes/ \
 			-I$(top_srcdir)/modules/scicos/includes \
             -I$(top_srcdir)/modules/elementary_functions/includes
 
+libsciscicos_blocks_la_CPPFLAGS = $(JAVA_JNI_INCLUDE) \
+			-I$(srcdir)/includes/ \
+			-I$(srcdir)/src/jni/ \
+			-I$(srcdir)/src/cpp/ \
+			-I$(srcdir)/src/c/ \
+	 		-I$(top_srcdir)/modules/jvm/includes/ \
+			-I$(top_srcdir)/modules/output_stream/includes \
+			-I$(top_srcdir)/modules/localization/includes \
+			-I$(top_srcdir)/modules/api_scilab/includes
 
 libsciscicos_blocks_la_SOURCES = $(SCICOS_BLOCKS_C_SOURCES) \
 $(SCICOS_BLOCKS_FORTRAN_SOURCES) \
