--- a/scilab/modules/hdf5/Makefile.am
+++ b/scilab/modules/hdf5/Makefile.am
@@ -9,7 +9,10 @@
 
 if HDF5
 
+if GUI
+# No GUI. Disable the Java build
 USEANT=1
+endif
 
 HDF5_SOURCES = src/c/h5_fileManagement.c \
 src/c/h5_writeDataToFile.c \
