--- a/scilab/modules/jvm/Makefile.in
+++ b/scilab/modules/jvm/Makefile.in
@@ -434,6 +434,7 @@ libscijvm_la_CFLAGS = $(JAVA_JNI_INCLUDE) \
 			-I$(top_srcdir)/modules/fileio/includes/
 
 pkglib_LTLIBRARIES = libscijvm-disable.la $(am__append_1)
+@GUI_TRUE@USEANT = 1
 libscijvm_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) \
 	-lpthread $(XML_LIBS) $(am__append_2)
 libscijvm_la_LIBADD = $(top_builddir)/libs/MALLOC/libscimalloc.la $(top_builddir)/modules/fileio/libscifileio.la $(top_builddir)/modules/core/libscicore.la $(top_builddir)/libs/dynamiclibrary/libscidynamiclibrary.la $(top_builddir)/modules/output_stream/libscioutput_stream.la
@@ -476,7 +477,6 @@ src/c/getLibrarypath.c \
 src/c/addToLibrarypath.c \
 src/c/getJvmOptions.c
 
-USEANT = 1
 libscijvm_disable_la_SOURCES = src/nojvm/nojvm.c
 libscijvm_disable_la_CFLAGS = -I$(srcdir)/includes/ \
 			-I$(top_srcdir)/modules/call_scilab/includes \
