--- a/scilab/modules/renderer/Makefile.in
+++ b/scilab/modules/renderer/Makefile.in
@@ -999,7 +999,6 @@ src/jni/SubwinBackgroundDrawerGL.giws.xml
 
 # Provides macros compilation, Java compilation, cleaning
 # If you want Makefile to call ant, added USEANT=1
-USEANT = 1
 @GIWS_TRUE@BUILT_SOURCES = giws
 
 # All the sources needed by libscirenderer.la
@@ -1010,6 +1009,7 @@ libscirenderer_disable_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
 # Name of the future library (.la will be replace by .so, .a, etc regarding
 # the system)
 pkglib_LTLIBRARIES = libscirenderer-disable.la $(am__append_1)
+@GUI_TRUE@USEANT = 1
 libscirenderer_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION)
 
 # Where all the Scilab stuff is installed (macros, help, ...)
